# Flakes

./: README.md  flake.nix
templates/cpp/: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  flake.nix  readme.md
templates/cpp/src/: main.cpp
templates/elixir/: flake.nix
templates/java/: flake.nix
templates/python/: flake.nix
templates/python-jupyter/: flake.nix  main.ipynb
templates/rust/: flake.nix
